- Dependencies
 - Upgrade VDS.Common to 1.2.0 which resolves an issue that users may encounter (CORE-317, CORE-292)
- Core API
 - TreeIndexedTripleCollection now supports completely configurable indices (CORE-309)
- Storage API
 - SesameNativeTemplate is now a public class
 - AllegroGraphConnector now implements IUpdateableStorage and IAsyncUpdateableStorage (CORE-308)

Removed


0.9.0 RC4
---------

Added
- Ontology API
 - Added Direct/Indirect SubClasses and SuperClasses property on OntologyClass (CORE-295)
 - Added Direct/Indirect SubProperties and SuperProperties property on OntologyProperty (CORE-295)
 - Added Siblings property on OntologyClass and OntologyProperty (CORE-296)
 - Added IsTopClass and IsBottomClass property on OntologyClass (CORE-293)
 - Added IsTopProperty and IsBottomProperty on OntologyProperty (CORE-293)
 - Added Owl/Rdf/All Classes and Properties properties on OntologyGraph (CORE-293)
 - Added AsClass() and AsProperty() methods on OntologyResource (CORE-293)

Changed
- Bug Fixes
 - Fix a bug to allow OrderByVariable to take variable name with/without leading ?/$ 
 - Fix a bug in SparqlJsonParser relating to some valid data being rejected due to Json.Net perculiarities (CORE-290)
 - Fix a bug in the streaming mode of the RDF/XML parser not respecting external Base URI (CORE-216)
 - Fix a corner case bug in interaction between GRAPH clause and inner patterns that match but have no variables (CORE-294)
 - Fix a corner base base in interaction between GRAPH clauses and property paths (CORE-294)
 - Fix a bug in INSERT/DELETE commands when a GRAPH clause with an unbound variable is used (CORE-300)
 - Fix a bug with the XPath Replace function (CORE-299)
 - Fix a bug with applying aggregates over empty intermediate results giving incorrect results (CORE-304)
 - Add an opt-in workaround for HTTP Basic Authentication against badly behaved server (CORE-301)